# phone2a-apu-unlock

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
abi/: apusys_ioctl_abi.json
apu650-probe/: Cargo.toml  GOTCHAS.txt  README.md
apu650-probe/src/: lib.rs  main.rs  uapi.rs
dla/: FETCH_SDK.md  README.md  compile_dla.sh  extract_genio_sdk.sh  make_test_tflite.py
docs/: ABI.md  DLA.md  FRIDA.md  HANDSHAKE.md  ROADMAP.md  UNLOCK.md
frida/: README.md  apu_ioctl_tap.js  decode.py
ksu-module/: README.md  customize.sh  module.prop  post-fs-data.sh  sepolicy.rule
scripts/: first-contact.sh  frida-tap.sh
