[package]
name = "apu650-probe"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "apu650_probe"
path = "src/lib.rs"

[[bin]]
name = "apu650-probe"
path = "src/main.rs"

[[bin]]
name = "dla-runner"
path = "src/bin/dla-runner.rs"

[dependencies]
nix = { version = "0.27", default-features = false, features = ["ioctl"] }
libc = "0.2"
memmap2 = "0.9"
static_assertions = "1"
anyhow = "1"

[profile.release]
opt-level = "s"
lto = "thin"
strip = true
panic = "abort"
